--- a/index.html
+++ b/index.html
@@ -5,51 +5,70 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>goit-markup-hw-01</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <nav>
-        <a href=""><span>Web</span>Studio</a>
-        <ul>
-          <li><a href="">Студія</a></li>
-          <li><a href="">Портфоліо</a></li>
-          <li><a href="">Контакти</a></li>
+    <header class="header">
+      <nav class="header-menu">
+        <a class="header-logo logo" href=""><span>Web</span>Studio</a>
+        <ul class="header-list list">
+          <li><a class="header-list-link link" href="">Студія</a></li>
+          <li><a class="header-list-link link" href="">Портфоліо</a></li>
+          <li><a class="header-list-link link" href="">Контакти</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="header-contact list">
+        <li>
+          <a class="header-contact-link link" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li><a class="header-contact-link link" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <main>
-      <section>
-        <h1>Ефективні рішення для вашого бізнесу</h1>
-        <button type="button">Замовити послугу</button>
+      <section class="hero">
+        <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+        <button class="hero-btn" type="button">Замовити послугу</button>
       </section>
-      <section>
-        <h2>Особливості</h2>
-        <ul>
-          <li>
-            <h3>Увага до деталей</h3>
-            <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+      <section class="particular">
+        <h2 class="particular-title visually-hidden">Особливості</h2>
+        <ul class="particular-list list">
+          <li class="particular-list-item">
+            <h3 class="particular-subtitle">Увага до деталей</h3>
+            <p class="particular-text">
+              Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
+            </p>
           </li>
-          <li>
-            <h3>Пунктуальність</h3>
-            <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+          <li class="particular-list-item">
+            <h3 class="particular-subtitle">Пунктуальність</h3>
+            <p class="particular-text">
+              Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
+            </p>
           </li>
-          <li>
-            <h3>Планування</h3>
-            <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+          <li class="particular-list-item">
+            <h3 class="particular-subtitle">Планування</h3>
+            <p class="particular-text">
+              Так само консультація з широким активом значною мірою зумовлює.
+            </p>
           </li>
-          <li>
-            <h3>Сучасні технології</h3>
-            <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+          <li class="particular-list-item">
+            <h3 class="particular-subtitle">Сучасні технології</h3>
+            <p class="particular-text">
+              Значимість цих проблем настільки очевидна, що реалізація планових завдань.
+            </p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Чим ми займаємося</h2>
-        <ul>
+      <section class="work">
+        <h2 class="work-title title">Чим ми займаємося</h2>
+        <ul class="work-list list">
           <li>
             <img src="./images/img_1.jpg" width="370" height="294" alt="Людина програмує" />
           </li>
@@ -71,61 +90,65 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Наша команда</h2>
-        <ul>
-          <li>
+      <section class="team">
+        <h2 class="team-title title">Наша команда</h2>
+        <ul class="team-list list">
+          <li class="team-list-item">
             <img
               src="./images/person1.jpg"
               width="270"
               height="260"
               alt="Фотографія Ігор Дем'яненко "
             />
-            <h3>Ігор Дем'яненко</h3>
-            <p>Product Designer</p>
+            <h3 class="team-subtitle">Ігор Дем'яненко</h3>
+            <p class="team-text">Product Designer</p>
           </li>
-          <li>
+          <li class="team-list-item">
             <img
               src="./images/person2.jpg"
               width="270"
               height="260"
               alt="Фотографія Ольга Рєпіна"
             />
-            <h3>Ольга Рєпіна</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team-subtitle">Ольга Рєпіна</h3>
+            <p class="team-text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-list-item">
             <img
               src="./images/person3.jpg"
               width="270"
               height="260"
               alt="Фотографія Микола Тарасов"
             />
-            <h3>Микола Тарасов</h3>
-            <p>Marketing</p>
+            <h3 class="team-subtitle">Микола Тарасов</h3>
+            <p class="team-text">Marketing</p>
           </li>
-          <li>
+          <li class="team-list-item">
             <img
               src="./images/person4.jpg"
               width="270"
               height="260"
               alt="Фотографія Михайло Єрмаков"
             />
-            <h3>Михайло Єрмаков</h3>
-            <p>UI Designer</p>
+            <h3 class="team-subtitle">Михайло Єрмаков</h3>
+            <p class="team-text">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href=""><span>Web</span>Studio</a>
-      <address>
-        <ul>
+    <footer class="footer">
+      <a class="footer-logo logo" href=""><span>Web</span>Studio</a>
+      <address class="footer-address">
+        <ul class="footer-list list">
           <li>
-            <a href="https://goo.gl/maps/dn8XtDKzYARkyVmw8">м. Київ, пр-т Лесі Українки, 26</a>
+            <a class="footer-list-link link" href="https://goo.gl/maps/dn8XtDKzYARkyVmw8"
+              >м. Київ, пр-т Лесі Українки, 26</a
+            >
           </li>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+          <li>
+            <a class="footer-list-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li><a class="footer-list-link link" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
       </address>
     </footer>
