ready html layout of the second part

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
   <body>
     <header class="header">
       <nav class="header-menu">
-        <a class="header-logo logo" href=""><span>Web</span>Studio</a>
+        <a class="header-logo logo" href="./index.html"><span>Web</span>Studio</a>
         <ul class="header-list list">
           <li><a class="header-list-link link" href="">Студія</a></li>
-          <li><a class="header-list-link link" href="">Портфоліо</a></li>
+          <li><a class="header-list-link link" href="./portfolio.html">Портфоліо</a></li>
           <li><a class="header-list-link link" href="">Контакти</a></li>
         </ul>
       </nav>
@@ -35,7 +35,7 @@
     <main>
       <section class="hero">
         <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-        <button class="hero-btn" type="button">Замовити послугу</button>
+        <button class="hero-btn btn" type="button">Замовити послугу</button>
       </section>
       <section class="particular">
         <h2 class="particular-title visually-hidden">Особливості</h2>
@@ -137,7 +137,7 @@
       </section>
     </main>
     <footer class="footer">
-      <a class="footer-logo logo" href=""><span>Web</span>Studio</a>
+      <a class="footer-logo logo" href="./index.html"><span>Web</span>Studio</a>
       <address class="footer-address">
         <ul class="footer-list list">
           <li>
