--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <nav class="header-menu">
         <a class="header-logo logo" href="./index.html"><span>Web</span>Studio</a>
         <ul class="header-list list">
-          <li><a class="header-list-link link" href="">Студія</a></li>
+          <li><a class="header-list-link link active" href="">Студія</a></li>
           <li><a class="header-list-link link" href="./portfolio.html">Портфоліо</a></li>
           <li><a class="header-list-link link" href="">Контакти</a></li>
         </ul>
