--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
         <a class="header-logo logo" href="./index.html"><span>Web</span>Studio</a>
         <ul class="header-list list">
           <li><a class="header-list-link link" href="./index.html">Студія</a></li>
-          <li><a class="header-list-link link" href="./portfolio.html">Портфоліо</a></li>
+          <li><a class="header-list-link link active" href="./portfolio.html">Портфоліо</a></li>
           <li><a class="header-list-link link" href="">Контакти</a></li>
         </ul>
       </nav>
@@ -35,12 +35,59 @@
     <main>
       <section class="project">
         <h2 class="project-title visually-hidden">project</h2>
-        <ul>
-          <li><button>Усі</button></li>
-          <li><button>Веб-сайти</button></li>
-          <li><button>Додатки</button></li>
-          <li><button>Дизайн</button></li>
-          <li><button>Маркетинг</button></li>
+        <ul class="project-filter list">
+          <li><button class="project-btn btn" type="button">Усі</button></li>
+          <li><button class="project-btn btn" type="button">Веб-сайти</button></li>
+          <li><button class="project-btn btn" type="button">Додатки</button></li>
+          <li><button class="project-btn btn" type="button">Дизайн</button></li>
+          <li><button class="project-btn btn" type="button">Маркетинг</button></li>
+        </ul>
+        <ul class="project-list list">
+          <li>
+            <img src="./images/work1.jpg" alt="Ноутбук" />
+            <h3 class="project-subtitle">Технокряк</h3>
+            <p class="project-text">Веб-сайт</p>
+          </li>
+          <li>
+            <img src="./images/work2.jpg" alt="Гравці у баскетбол" />
+            <h3 class="project-subtitle">Постер New Orlean vs Golden Star</h3>
+            <p class="project-text">Дизайн</p>
+          </li>
+          <li>
+            <img src="./images/work3.jpg" alt="Логотип ресторану" />
+            <h3 class="project-subtitle">Ресторан Seafood</h3>
+            <p class="project-text">Додаток</p>
+          </li>
+          <li>
+            <img src="./images/work4.jpg" alt="Навушники" />
+            <h3 class="project-subtitle">Проєкт Prime</h3>
+            <p class="project-text">Маркетинг</p>
+          </li>
+          <li>
+            <img src="./images/work5.jpg" alt="Коробки" />
+            <h3 class="project-subtitle">Проєкт Boxes</h3>
+            <p class="project-text">Додаток</p>
+          </li>
+          <li>
+            <img src="./images/work6.jpg" alt="Монітор" />
+            <h3 class="project-subtitle">Inspiration has no Borders</h3>
+            <p class="project-text">Веб-сайт</p>
+          </li>
+          <li>
+            <img src="./images/work7.jpg" alt="Журнал" />
+            <h3 class="project-subtitle">Видання Limited Edition</h3>
+            <p class="project-text">Дизайн</p>
+          </li>
+          <li>
+            <img src="./images/work8.jpg" alt="Бирка з назвою проекту" />
+            <h3 class="project-subtitle">Проєкт LAB</h3>
+            <p class="project-text">Маркетинг</p>
+          </li>
+          <li>
+            <img src="./images/work9.jpg" alt="Людина працює на ноутбуці" />
+            <h3 class="project-subtitle">Growing Business</h3>
+            <p class="project-text">Додаток</p>
+          </li>
         </ul>
       </section>
     </main>
