--- a/portfolio.html
+++ b/portfolio.html
@@ -96,7 +96,7 @@
       <address class="footer-address">
         <ul class="footer-list list">
           <li>
-            <a class="footer-list-link link" href="https://goo.gl/maps/dn8XtDKzYARkyVmw8"
+            <a class="footer-list-link link color-link" href="https://goo.gl/maps/dn8XtDKzYARkyVmw8"
               >м. Київ, пр-т Лесі Українки, 26</a
             >
           </li>
