--- a/portfolio.html
+++ b/portfolio.html
@@ -44,47 +44,52 @@
         </ul>
         <ul class="project-list list">
           <li>
-            <img src="./images/work1.jpg" alt="Ноутбук" />
+            <img src="./images/work1.jpg" width="370" height="294" alt="Ноутбук" />
             <h3 class="project-subtitle">Технокряк</h3>
             <p class="project-text">Веб-сайт</p>
           </li>
           <li>
-            <img src="./images/work2.jpg" alt="Гравці у баскетбол" />
+            <img src="./images/work2.jpg" width="370" height="294" alt="Гравці у баскетбол" />
             <h3 class="project-subtitle">Постер New Orlean vs Golden Star</h3>
             <p class="project-text">Дизайн</p>
           </li>
           <li>
-            <img src="./images/work3.jpg" alt="Логотип ресторану" />
+            <img src="./images/work3.jpg" width="370" height="294" alt="Логотип ресторану" />
             <h3 class="project-subtitle">Ресторан Seafood</h3>
             <p class="project-text">Додаток</p>
           </li>
           <li>
-            <img src="./images/work4.jpg" alt="Навушники" />
+            <img src="./images/work4.jpg" width="370" height="294" alt="Навушники" />
             <h3 class="project-subtitle">Проєкт Prime</h3>
             <p class="project-text">Маркетинг</p>
           </li>
           <li>
-            <img src="./images/work5.jpg" alt="Коробки" />
+            <img src="./images/work5.jpg" width="370" height="294" alt="Коробки" />
             <h3 class="project-subtitle">Проєкт Boxes</h3>
             <p class="project-text">Додаток</p>
           </li>
           <li>
-            <img src="./images/work6.jpg" alt="Монітор" />
+            <img src="./images/work6.jpg" width="370" height="294" alt="Монітор" />
             <h3 class="project-subtitle">Inspiration has no Borders</h3>
             <p class="project-text">Веб-сайт</p>
           </li>
           <li>
-            <img src="./images/work7.jpg" alt="Журнал" />
+            <img src="./images/work7.jpg" width="370" height="294" alt="Журнал" />
             <h3 class="project-subtitle">Видання Limited Edition</h3>
             <p class="project-text">Дизайн</p>
           </li>
           <li>
-            <img src="./images/work8.jpg" alt="Бирка з назвою проекту" />
+            <img src="./images/work8.jpg" width="370" height="294" alt="Бирка з назвою проекту" />
             <h3 class="project-subtitle">Проєкт LAB</h3>
             <p class="project-text">Маркетинг</p>
           </li>
           <li>
-            <img src="./images/work9.jpg" alt="Людина працює на ноутбуці" />
+            <img
+              src="./images/work9.jpg"
+              width="370"
+              height="294"
+              alt="Людина працює на ноутбуці"
+            />
             <h3 class="project-subtitle">Growing Business</h3>
             <p class="project-text">Додаток</p>
           </li>
